# ChangeLog for net-mail/courier
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/courier/ChangeLog,v 1.1 2004/05/30 02:17:47 robbat2 Exp $

*courier-0.45.4 (29 May 2004)

  29 May 2004; Robin H. Johnson <robbat2@gentoo.org> courier-0.45.1.ebuild,
  courier-0.45.2.ebuild, courier-0.45.3.ebuild, courier-0.45.4.ebuild,
  courier-0.45.5.ebuild, metadata.xml, files/apache-sqwebmail.inc, files/bofh,
  files/courier-init, files/dot_courier, files/locallowercase,
  files/norewrite.patch, files/password.dist, files/set-mime:
  Moved from net-mail/courier to mail-mta/courier.

*courier-0.45.5 (22 May 2004)

  22 May 2004; Scott W Taylor <swtaylor@gentoo.org> +courier-0.45.5.ebuild:
  bump 0.45.5

  22 May 2004; Scott W Taylor <swtaylor@gentoo.org> files/courier-init:
  spelling fix and init script update for sqwebmail which gets renamed in 0.45.5

  28 Apr 2004; Scott W Taylor <swtaylor@gentoo.org> courier-0.45.2.ebuild,
  courier-0.45.3.ebuild:
  get ppc mask caught up

  28 Apr 2004; Scott W Taylor <swtaylor@gentoo.org> courier-0.45.2.ebuild,
  courier-0.45.3.ebuild, courier-0.45.4.ebuild:
  Bug 49198 - moved ${D} adjustments out of pkg_preinst

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> courier-0.45.3.ebuild,
  courier-0.45.4.ebuild:
  Add inherit eutils

  21 Apr 2004; Scott W Taylor <swtaylor@gentoo.org> courier-0.45.2.ebuild,
  courier-0.45.3.ebuild, courier-0.45.4.ebuild:
  mark 0.45.2 stable and fix bug 41819

  09 Apr 2004; Scott W Taylor <swtaylor@gentoo.org> courier-0.45.4.ebuild:
  Added ~sparc on 0.45.4 too

  06 Apr 2004; Jason Wever <weeve@gentoo.org> courier-0.45.3.ebuild:
  Added ~sparc keyword wrt bug #46319.

*courier-0.45.4 (06 Apr 2004)

  06 Apr 2004; Scott W Taylor <swtaylor@gentoo.org> courier-0.45.4.ebuild:
  version bump

*courier-0.45.3 (01 Apr 2004)

  01 Apr 2004; Scott W Taylor <swtaylor@gentoo.org> courier-0.45.3.ebuild,