@@ -1,3 +1,11 @@
+MD5 32911e8287614709d73b25f7a44dc4f7 ChangeLog 10595
+MD5 8b79a4095f91cc564f497b2e24331ab8 courier-0.45.1.ebuild 10417
+MD5 3f39528d6cbb9e247c9173ee2c5c452a courier-0.45.2.ebuild 10452
+MD5 7af6ae5b6f825d951f53c2e4a7e90e1b courier-0.45.3.ebuild 10593
+MD5 c808587a6773fcfcc7e10ecbbe4c5ee8 courier-0.45.4.ebuild 10597
+MD5 998a12be29dc157df2b572c32afd5464 courier-0.45.5.ebuild 10694
+MD5 b287829e2f9edbcf1ff7bb349055e77e metadata.xml 392
+MD5 2440ceb0d5b910abf297c039a6f17214 courier-0.45.5.20040606.ebuild 10350
 MD5 d8967dea60963b1c0abaccbb2c57ea64 files/apache-sqwebmail.inc 347
 MD5 a546a21f960e4f921e71f614f719a2ce files/bofh 23
 MD5 8041db031156342e93407a73a0ae75f5 files/courier-init 5206
@@ -11,10 +19,4 @@ MD5 d41d8cd98f00b204e9800998ecf8427e files/locallowercase 0
 MD5 098e16e61446aceb242735b1ca70509a files/norewrite.patch 489
 MD5 52f032e570c6f5f9f69b4e4bdfa562a1 files/password.dist 247
 MD5 e3a4ab031bd750b7ce2c7b85fee83d8e files/set-mime 741
-MD5 3ac407cb6593d8faa19760b05cb6444f ChangeLog 10421
-MD5 8b79a4095f91cc564f497b2e24331ab8 courier-0.45.1.ebuild 10417
-MD5 3f39528d6cbb9e247c9173ee2c5c452a courier-0.45.2.ebuild 10452
-MD5 7af6ae5b6f825d951f53c2e4a7e90e1b courier-0.45.3.ebuild 10593
-MD5 c808587a6773fcfcc7e10ecbbe4c5ee8 courier-0.45.4.ebuild 10597
-MD5 998a12be29dc157df2b572c32afd5464 courier-0.45.5.ebuild 10694
-MD5 b287829e2f9edbcf1ff7bb349055e77e metadata.xml 392
+MD5 6550f1ee0d47e1339c92bf28f694ae91 files/digest-courier-0.45.5.20040606 77
