@@ -1,0 +1,1 @@
+MD5 9a3620beb53d13cbb6cb337189d0a535 courier-0.45.5.20040606.tar.bz2 4308762
