@@ -1,6 +1,12 @@
 # ChangeLog for net-mail/courier
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/courier/ChangeLog,v 1.1 2004/05/30 02:17:47 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/courier/ChangeLog,v 1.2 2004/06/08 21:56:24 swtaylor Exp $
+
+*courier-0.45.5.20040606 (08 Jun 2004)
+
+  08 Jun 2004; Scott W Taylor <swtaylor@gentoo.org>
+  +courier-0.45.5.20040606.ebuild:
+  Spiffy new courier. Tidy up ebuild as well.
 
 *courier-0.45.4 (29 May 2004)
 
